tests/snapshots/snapshots__command_palette_filtered_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxtime-snapshot.txt  •  15 ta DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @l… created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cl… due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home            ┌ tuxtime · command ───────────────────────────────────────┐ptop                
   +learning        │ > arch█  4 matches                                       │                    
   +personal        │──────────────────────────────────────────────────────────│                    
   +travel          │ ▶ archive completed tasks                              A │                    
                    │   toggle archive view                                  a │1 Finish Q2 board   
 CONTEXTS           │   fuzzy search                                         / │aptop               
   @errands         │   save search as filter                               fs │6                   
   @home            │                                                          │                    
   @laptop          │                                                          │                    
   @phone           │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │  ↑↓ / Ctrl-N/P navigate · Enter run · Esc cancel         │                    
                    └──────────────────────────────────────────────────────────┘                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 COMMAND   type to filter · Enter run · Esc cancel          15 open · 2026-05-06 · tuxtime 2026.7.3
